# Analysis_AI

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile.backend  Dockerfile.sanitizer  IMPLEMENTATION_STATUS.md  PROJECT_DOCUMENTATION.md  REVAMP_PLAN.md  analysisai.agent_prompts.json  app.py  docker-compose.yml  pyproject.toml  sanitizer-requirements.txt
app/: main.py
app/agents/: llm.py  outputs.py  prompts.py
app/api/: analyses.py  health.py  prompts.py  sanitization.py  stages.py  summary.py
app/core/: config.py  logging.py
app/db/: mongo.py
app/graph/: stage_graph.py  state.py  tools.py
app/models/: __init__.py  agent_prompt.py  agent_run.py  analysis.py  analysis_file.py  dictionaries.py  enums.py  stage_chat.py  stage_document.py
app/repositories/: agent_prompt_repo.py  agent_run_repo.py  analyses_repo.py  analysis_files_repo.py  base.py  dictionary_repo.py  stage_chat_repo.py  stage_documents_repo.py
app/schemas/: analysis.py  common.py  sanitization.py  stage.py
app/services/: analysis_service.py  dictionary_service.py  file_extractor.py  pipeline_service.py  sanitizer_client.py  summary_service.py
tests/: test_sanitizer_client.py
