[project]
name = "analysis-ai"
version = "0.1.0"
description = "LLM-powered document analysis platform (FastAPI + LangGraph + OpenAI + MongoDB)"
requires-python = ">=3.11"

# Runtime dependencies. We add libraries phase-by-phase so you always know why each one
# is here. Phase 0 only needs the web framework, server, and typed config.
dependencies = [
    "fastapi>=0.115",          # web framework (async, Pydantic-native)
    "uvicorn[standard]>=0.30",  # ASGI server that runs FastAPI
    "pydantic>=2.7",            # data validation / models
    "pydantic-settings>=2.3",   # typed env-var config
    # --- added in later phases (kept here so `pip install -e .` sets you up fully) ---
    "beanie>=2.1",              # async ODM (uses PyMongo's native async client) (Phase 1)
    "openai>=1.40",             # OpenAI Python SDK            (Phase 2)
    "langgraph>=0.2.20",        # agent workflow runtime       (Phase 3)
    "langchain-openai>=0.1.20", # ChatOpenAI model for graph   (Phase 3)
    "httpx>=0.27",              # async HTTP (sanitizer call)  (Phase 7)
    "pypdf>=4.2",               # PDF text extraction          (Phase 4)
    "python-docx>=1.1",         # DOCX text extraction         (Phase 4)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "mongomock-motor>=0.0.29",  # in-memory Mongo for tests
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
